<resources>
    <string name="app_name">PrimeraClculadora</string>
    <string name="introduce_numero_1">Introduce numero 1</string>
    <string name="introduce_n_mero_2">Introduce número 2</string>
    <string name="salir">Salir</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_todo">Calcular Todo</string>
    <string name="textview">TextView</string>
    <string name="volver">Volver</string>
    <string name="creditos">Créditos</string>
    <string name="resultados">Resultados</string>
    <string name="suma">Suma:</string>
    <string name="resta">Resta:</string>
    <string name="multiplicaci_n">Multiplicación:</string>
    <string name="divisi_n">División:</string>
</resources>