<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnCalcularTodo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFAFD"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/enunciadoNum2"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/enunciadoNum1"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/enunciadoNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/introduce_numero_1"
        app:layout_constraintBottom_toTopOf="@+id/num1"
        app:layout_constraintStart_toStartOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/enunciadoNum2"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="17dp"
        android:onClick="salir"
        android:text="@string/salir"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/creditos"
        app:layout_constraintTop_toBottomOf="@+id/creditos"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="17dp"
        android:onClick="cambiarCreditos"
        android:text="@string/creditos"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/enunciadoNum2"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:onClick="cambiarCalular"
        android:text="@string/calcular"
        app:layout_constraintBottom_toTopOf="@+id/creditos"
        app:layout_constraintStart_toStartOf="@+id/creditos"
        app:layout_constraintTop_toBottomOf="@+id/num2"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/enunciadoNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/introduce_n_mero_2"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintStart_toStartOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="26dp"
        android:text="CALCULADORA"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/enunciadoNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalir"
        app:srcCompat="@mipmap/gengar" />

</androidx.constraintlayout.widget.ConstraintLayout>